--- a/mandelbulber2/formula/ui/mandelbox.ui
+++ b/mandelbulber2/formula/ui/mandelbox.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>mandelbox</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -424,10 +424,10 @@ fixed radius:</string>
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-18000.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>18000.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
@@ -459,10 +459,10 @@ fixed radius:</string>
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-18000.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>18000.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
@@ -487,10 +487,10 @@ fixed radius:</string>
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-18000.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>18000.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
