--- a/mandelbulber2/formula/ui/menger_mod1.ui
+++ b/mandelbulber2/formula/ui/menger_mod1.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>menger_mod1</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -380,10 +380,10 @@
              <number>6</number>
             </property>
             <property name="minimum">
-             <double>-180.000000000000000</double>
+             <double>-36000.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>180.000000000000000</double>
+             <double>36000.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>1.000000000000000</double>
@@ -415,10 +415,10 @@
              <number>6</number>
             </property>
             <property name="minimum">
-             <double>-180.000000000000000</double>
+             <double>-36000.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>180.000000000000000</double>
+             <double>36000.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>1.000000000000000</double>
@@ -443,10 +443,10 @@
              <number>6</number>
             </property>
             <property name="minimum">
-             <double>-180.000000000000000</double>
+             <double>-36000.000000000000000</double>
             </property>
             <property name="maximum">
-             <double>180.000000000000000</double>
+             <double>36000.000000000000000</double>
             </property>
             <property name="singleStep">
              <double>1.000000000000000</double>
@@ -1048,25 +1048,25 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
