--- a/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_msltoe_m3d.ui
@@ -487,6 +487,13 @@
        </property>
       </widget>
      </item>
+     <item row="9" column="0">
+      <widget class="QLabel" name="label_149">
+       <property name="text">
+        <string>z.z limit:</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
