--- a/mandelbulber2/formula/ui/transf_add_constant_rot_v1.ui
+++ b/mandelbulber2/formula/ui/transf_add_constant_rot_v1.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_add_constant_rot_v1</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>826</width>
-    <height>976</height>
+    <height>1051</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -171,10 +171,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -206,10 +206,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
@@ -234,10 +234,10 @@
         <number>6</number>
        </property>
        <property name="minimum">
-        <double>-180.000000000000000</double>
+        <double>-36000.000000000000000</double>
        </property>
        <property name="maximum">
-        <double>180.000000000000000</double>
+        <double>36000.000000000000000</double>
        </property>
        <property name="singleStep">
         <double>1.000000000000000</double>
