--- a/mandelbulber2/formula/ui/transf_benesi_t5b.ui
+++ b/mandelbulber2/formula/ui/transf_benesi_t5b.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_benesi_t5b</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>916</width>
-    <height>1339</height>
+    <height>1401</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -428,6 +428,13 @@
        </property>
       </widget>
      </item>
+     <item row="9" column="1">
+      <widget class="QLabel" name="label_257">
+       <property name="text">
+        <string>Scale:</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -484,10 +491,10 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-180.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>180.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
@@ -519,10 +526,10 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-180.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>180.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
@@ -547,10 +554,10 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>-180.000000000000000</double>
+           <double>-36000.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>180.000000000000000</double>
+           <double>36000.000000000000000</double>
           </property>
           <property name="singleStep">
            <double>1.000000000000000</double>
